syntax = "proto3";

option csharp_namespace = "via.sep3.grpc.book";

message BookMessage{
  string book = 1;
}

service BookService {
  rpc getAllBooks(BookMessage) returns (BookMessage);
  rpc addBook(BookMessage) returns (BookMessage);
}